; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/hcic/extr_hcicmds.c_btsnd_hcic_sniff_sub_rate.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/hcic/extr_hcicmds.c_btsnd_hcic_sniff_sub_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64 }

@HCIC_PARAM_SIZE_SNIFF_SUB_RATE = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@HCIC_PREAMBLE_SIZE = common dso_local global i64 0, align 8
@HCI_SNIFF_SUB_RATE = common dso_local global i32 0, align 4
@LOCAL_BR_EDR_CONTROLLER_ID = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @btsnd_hcic_sniff_sub_rate(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_4__*, align 8
  %11 = alloca i32*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load i64, i64* @HCIC_PARAM_SIZE_SNIFF_SUB_RATE, align 8
  %13 = call %struct.TYPE_4__* @HCI_GET_CMD_BUF(i64 %12)
  store %struct.TYPE_4__* %13, %struct.TYPE_4__** %10, align 8
  %14 = icmp eq %struct.TYPE_4__* %13, null
  br i1 %14, label %15, label %17

15:                                               ; preds = %4
  %16 = load i32, i32* @FALSE, align 4
  store i32 %16, i32* %5, align 4
  br label %50

17:                                               ; preds = %4
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i64 1
  %20 = bitcast %struct.TYPE_4__* %19 to i32*
  store i32* %20, i32** %11, align 8
  %21 = load i64, i64* @HCIC_PREAMBLE_SIZE, align 8
  %22 = load i64, i64* @HCIC_PARAM_SIZE_SNIFF_SUB_RATE, align 8
  %23 = add nsw i64 %21, %22
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 1
  store i64 %23, i64* %25, align 8
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 0
  store i64 0, i64* %27, align 8
  %28 = load i32*, i32** %11, align 8
  %29 = load i32, i32* @HCI_SNIFF_SUB_RATE, align 4
  %30 = call i32 @UINT16_TO_STREAM(i32* %28, i32 %29)
  %31 = load i32*, i32** %11, align 8
  %32 = load i64, i64* @HCIC_PARAM_SIZE_SNIFF_SUB_RATE, align 8
  %33 = call i32 @UINT8_TO_STREAM(i32* %31, i64 %32)
  %34 = load i32*, i32** %11, align 8
  %35 = load i32, i32* %6, align 4
  %36 = call i32 @UINT16_TO_STREAM(i32* %34, i32 %35)
  %37 = load i32*, i32** %11, align 8
  %38 = load i32, i32* %7, align 4
  %39 = call i32 @UINT16_TO_STREAM(i32* %37, i32 %38)
  %40 = load i32*, i32** %11, align 8
  %41 = load i32, i32* %8, align 4
  %42 = call i32 @UINT16_TO_STREAM(i32* %40, i32 %41)
  %43 = load i32*, i32** %11, align 8
  %44 = load i32, i32* %9, align 4
  %45 = call i32 @UINT16_TO_STREAM(i32* %43, i32 %44)
  %46 = load i32, i32* @LOCAL_BR_EDR_CONTROLLER_ID, align 4
  %47 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %48 = call i32 @btu_hcif_send_cmd(i32 %46, %struct.TYPE_4__* %47)
  %49 = load i32, i32* @TRUE, align 4
  store i32 %49, i32* %5, align 4
  br label %50

50:                                               ; preds = %17, %15
  %51 = load i32, i32* %5, align 4
  ret i32 %51
}

declare dso_local %struct.TYPE_4__* @HCI_GET_CMD_BUF(i64) #1

declare dso_local i32 @UINT16_TO_STREAM(i32*, i32) #1

declare dso_local i32 @UINT8_TO_STREAM(i32*, i64) #1

declare dso_local i32 @btu_hcif_send_cmd(i32, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
